cbits/Bullet.h

void* btCollisionWorld_LocalRayResult_new(void* p0,void* p1,float* p2,float p3); //constructor: LocalRayResult  ( ::btCollisionWorld::LocalRayResult::* )( ::btCollisionObject *,::btCollisionWorld::LocalShapeInfo *,::btVector3 const &,::btScalar ) 
void btCollisionWorld_LocalRayResult_free(void *c);
 
void btCollisionWorld_LocalRayResult_m_collisionObject_set(void *c,void* a); //attribute: ::btCollisionObject * btCollisionWorld_LocalRayResult->m_collisionObject
void* btCollisionWorld_LocalRayResult_m_collisionObject_get(void *c); //attribute: ::btCollisionObject * btCollisionWorld_LocalRayResult->m_collisionObject
void btCollisionWorld_LocalRayResult_m_hitFraction_set(void *c,float a); //attribute: ::btScalar btCollisionWorld_LocalRayResult->m_hitFraction
float btCollisionWorld_LocalRayResult_m_hitFraction_get(void *c); //attribute: ::btScalar btCollisionWorld_LocalRayResult->m_hitFraction
void btCollisionWorld_LocalRayResult_m_hitNormalLocal_set(void *c,float* a); //attribute: ::btVector3 btCollisionWorld_LocalRayResult->m_hitNormalLocal
void btCollisionWorld_LocalRayResult_m_hitNormalLocal_get(void *c,float* a);
void btCollisionWorld_LocalRayResult_m_localShapeInfo_set(void *c,void* a); //attribute: ::btCollisionWorld::LocalShapeInfo * btCollisionWorld_LocalRayResult->m_localShapeInfo
void* btCollisionWorld_LocalRayResult_m_localShapeInfo_get(void *c); //attribute: ::btCollisionWorld::LocalShapeInfo * btCollisionWorld_LocalRayResult->m_localShapeInfo
void* btCollisionWorld_LocalShapeInfo_new(); //constructor: LocalShapeInfo  ( ::btCollisionWorld::LocalShapeInfo::* )(  ) 
void btCollisionWorld_LocalShapeInfo_free(void *c);
 
void btCollisionWorld_LocalShapeInfo_m_shapePart_set(void *c,int a); //attribute: int btCollisionWorld_LocalShapeInfo->m_shapePart
int btCollisionWorld_LocalShapeInfo_m_shapePart_get(void *c); //attribute: int btCollisionWorld_LocalShapeInfo->m_shapePart
void btCollisionWorld_LocalShapeInfo_m_triangleIndex_set(void *c,int a); //attribute: int btCollisionWorld_LocalShapeInfo->m_triangleIndex
int btCollisionWorld_LocalShapeInfo_m_triangleIndex_get(void *c); //attribute: int btCollisionWorld_LocalShapeInfo->m_triangleIndex
float btCollisionWorld_RayResultCallback_addSingleResult(void *c,void* p0,int p1); //method: addSingleResult ::btScalar ( ::btCollisionWorld::RayResultCallback::* )( ::btCollisionWorld::LocalRayResult &,bool ) 
int btCollisionWorld_RayResultCallback_needsCollision(void *c,void* p0); //method: needsCollision bool ( ::btCollisionWorld::RayResultCallback::* )( ::btBroadphaseProxy * ) const
int btCollisionWorld_RayResultCallback_hasHit(void *c); //method: hasHit bool ( ::btCollisionWorld::RayResultCallback::* )(  ) const
void btCollisionWorld_RayResultCallback_m_closestHitFraction_set(void *c,float a); //attribute: ::btScalar btCollisionWorld_RayResultCallback->m_closestHitFraction
float btCollisionWorld_RayResultCallback_m_closestHitFraction_get(void *c); //attribute: ::btScalar btCollisionWorld_RayResultCallback->m_closestHitFraction
void btCollisionWorld_RayResultCallback_m_collisionFilterGroup_set(void *c,short int a); //attribute: short int btCollisionWorld_RayResultCallback->m_collisionFilterGroup
short int btCollisionWorld_RayResultCallback_m_collisionFilterGroup_get(void *c); //attribute: short int btCollisionWorld_RayResultCallback->m_collisionFilterGroup
void btCollisionWorld_RayResultCallback_m_collisionFilterMask_set(void *c,short int a); //attribute: short int btCollisionWorld_RayResultCallback->m_collisionFilterMask
short int btCollisionWorld_RayResultCallback_m_collisionFilterMask_get(void *c); //attribute: short int btCollisionWorld_RayResultCallback->m_collisionFilterMask
void btCollisionWorld_RayResultCallback_m_collisionObject_set(void *c,void* a); //attribute: ::btCollisionObject * btCollisionWorld_RayResultCallback->m_collisionObject
void* btCollisionWorld_RayResultCallback_m_collisionObject_get(void *c); //attribute: ::btCollisionObject * btCollisionWorld_RayResultCallback->m_collisionObject
void btCollisionWorld_RayResultCallback_m_flags_set(void *c,unsigned int a); //attribute: unsigned int btCollisionWorld_RayResultCallback->m_flags
unsigned int btCollisionWorld_RayResultCallback_m_flags_get(void *c); //attribute: unsigned int btCollisionWorld_RayResultCallback->m_flags